logs/validate.20260326-084037.log
error[E0433]: failed to resolve: could not find `Chap38` in the crate root
   --> src/Chap43/OrderedTableStEph.rs:9:16
    |
  9 |     use crate::Chap38::BSTParaStEph::BSTParaStEph::*;
    |                ^^^^^^ could not find `Chap38` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:421:9
    |
420 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap38")))]
    |                                                 ---------------------------------------------- the item is gated here
421 | pub mod Chap38 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap37` in the crate root
   --> src/Chap43/OrderedTableStEph.rs:10:16
    |
 10 |     use crate::Chap37::AVLTreeSeqStPer::AVLTreeSeqStPer::*;
    |                ^^^^^^ could not find `Chap37` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:398:9
    |
397 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap37")))]
    |                                                 ---------------------------------------------- the item is gated here
398 | pub mod Chap37 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap18` in the crate root
   --> src/Chap43/OrderedTableStEph.rs:11:16
    |
 11 |     use crate::Chap18::ArraySeqStPer::ArraySeqStPer::*;
    |                ^^^^^^ could not find `Chap18` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:302:9
    |
301 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap18")))]
    |                                                 ---------------------------------------------- the item is gated here
302 | pub mod Chap18 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap19` in the crate root
   --> src/Chap43/OrderedTableStEph.rs:12:16
    |
 12 |     use crate::Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphTrait;
    |                ^^^^^^ could not find `Chap19` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:313:9
    |
312 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap19")))]
    |                                                 ---------------------------------------------- the item is gated here
313 | pub mod Chap19 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap41` in the crate root
   --> src/Chap43/OrderedTableStEph.rs:13:16
    |
 13 |     use crate::Chap41::ArraySetStEph::ArraySetStEph::*;
    |                ^^^^^^ could not find `Chap41` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:443:9
    |
442 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap41")))]
    |                                                 ---------------------------------------------- the item is gated here
443 | pub mod Chap41 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap37` in the crate root
   --> src/Chap43/OrderedTableMtEph.rs:25:16
    |
 25 |     use crate::Chap37::AVLTreeSeqStPer::AVLTreeSeqStPer::*;
    |                ^^^^^^ could not find `Chap37` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:398:9
    |
397 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap37")))]
    |                                                 ---------------------------------------------- the item is gated here
398 | pub mod Chap37 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap41` in the crate root
   --> src/Chap43/OrderedTableMtEph.rs:26:16
    |
 26 |     use crate::Chap41::ArraySetStEph::ArraySetStEph::*;
    |                ^^^^^^ could not find `Chap41` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:443:9
    |
442 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "